--- a/glass_style.css
+++ b/glass_style.css
@@ -7,7 +7,7 @@
 }
 body
 {
-    background: url(https://dl.dropbox.com/s/mpmu0gjtxv2x3fs/Webp.net-resizeimage%20%281%29.jpg?raw=1) no-repeat center center fixed; 
+    background: url(https://source.unsplash.com/E8Ufcyxz514/2400x1823) no-repeat center center fixed; 
     background-size: cover;
 }
 .glass
@@ -52,24 +52,24 @@ h6
 {
     margin: 0;
 }
-.desc
+.card
 {
     width: 100%;
     text-align: center;
     position: absolute;
     top: 160px;
 }
-.primary-text
+.text1
 {
-    color: #d5d5d5;
-    font-size: 16px;
+    color: #000;
+    font-size: 18px;
     font-weight: 600;
     letter-spacing: 0.7px;
     margin: 5px 0;
 }
-.secondary-text
+.text2
 {
-    color: #c0c0c0;
+    color: #000;
     font-weight: 400;
     font-size: 14px;
     letter-spacing: 1px;
@@ -80,8 +80,7 @@ button
     background-color: rgba(255, 255, 255, 0.06);
     -webkit-backdrop-filter: blur(20px);
             backdrop-filter: blur(20px);
-    border: none;
-
+    border: 1px solid #04d9f1;
 }
 button{
     width: 80%;
