--- a/glass_style.css
+++ b/glass_style.css
@@ -18,7 +18,7 @@ body
     -webkit-backdrop-filter: blur(20px);
             backdrop-filter: blur(20px);
     position: absolute;
-     margin: auto;
+    margin: auto;
     left: 0;
     right: 0;
     top: 0;
@@ -93,5 +93,5 @@ button{
 }
 a{
     text-decoration: none;
-    color: #00AAFF;
+    color: #09065e;
 }
