--- a/glass_style.css
+++ b/glass_style.css
@@ -83,13 +83,19 @@ button
     border: 1px solid #04d9f1;
 }
 button{
-    width: 80%;
+    width: 60%;
     padding: 15px 0;
     position: absolute;
-    left: 10%;
+    left: 20%;
     top: 240px;
-    border-radius: 5px;
+    border-radius: 20px;
     outline: none;
+    box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+    transition: all300ms ease;
+}
+button:hover
+{
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
 }
 a{
     text-decoration: none;
