--- a/style.css
+++ b/style.css
@@ -212,7 +212,7 @@ body
     padding-left: 10px;
     padding-right: 10px;
 }
-.cileft .reflink, .ciright .reflink, .proj .reflink
+.cileft .reflink, .ciright .reflink
 {
     text-decoration: none;
     color: black;
@@ -235,13 +235,11 @@ body
     padding-bottom: 27px;
     border-bottom : 1px solid #000;
 }
-    /*
 .reflink
 {
     text-decoration: none;
     color: black;
 }
-    */
 .drn
 {
     position: relative;
